--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "java"
     //目前最新是0.4.16
-    id "org.jetbrains.intellij" version "0.4.10"
+    id "org.jetbrains.intellij" version "0.4.16"
 }
 
 apply plugin: 'idea'
@@ -9,12 +9,14 @@ apply plugin: 'org.jetbrains.intellij'
 apply plugin: 'java'
 
 group 'com.github.mustfun'
-version '1.1.12'
-sourceCompatibility = 1.8
+version '1.1.13-SNAPSHOT'
+//sourceCompatibility = 11
 
 
 
 repositories {
+    mavenLocal()
+    maven {url "http://mvnrepo.alibaba-inc.com/mvn/repository"}
     mavenCentral()
 }
 
@@ -26,7 +28,7 @@ dependencies {
     //compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
     //compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile group: 'org.yaml', name: 'snakeyaml', version: '1.21'
-    annotationProcessor 'org.projectlombok:lombok:1.18.2'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
     compileOnly 'org.projectlombok:lombok:1.18.2'
     compile group: 'org.javassist', name: 'javassist', version: '3.24.0-GA'
 
@@ -40,10 +42,11 @@ dependencies {
 
 intellij {
     //https://github.com/JetBrains/gradle-intellij-plugin/blob/master/README.md#intellij-platform-properties
-    //def ideaVersionExternDefinition = System.getenv("IDEA_VERSION")
-    //version = ideaVersionExternDefinition ? ideaVersionExternDefinition : ideaVersion
-    //println "Building for IntelliJ version: ${version}"
-    version = 'IU-2020.2'
+//    def ideaVersionExternDefinition = System.getenv("IDEA_VERSION")
+//    version = ideaVersionExternDefinition ? ideaVersionExternDefinition : ideaVersion
+//    println "Building for IntelliJ version: ${version}"
+    localPath = "/Users/fengymi/Library/Application Support/JetBrains/Toolbox/apps/IDEA-U/ch-0/213.5744.223/IntelliJ IDEA.app"
+    version = '2021.3'
     plugins = ['coverage','Spring','DatabaseTools','java']//'coverage'
     pluginName = 'MyBatis-Lite'
 }
@@ -146,7 +149,7 @@ patchPluginXml {
       </ul>
       """
     sinceBuild = '191.4213'
-    untilBuild = '203.*'
+    untilBuild = '213.*'
 }
 publishPlugin {
     token = ''
